fix contrast issues

--- a/styles/base.css
+++ b/styles/base.css
@@ -1,9 +1,15 @@
-*{
+* {
     margin: 0;
     box-sizing: border-box;
 }
 
-h1,h2,h3,h4,h5,h6,p {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: whitesmoke;
     text-align: center;
@@ -13,15 +19,20 @@ h1 {
     font-size: 4vw;
 }
 
-h2, h3 {
-    color: rgb(6, 105, 163);
+h2,
+h3 {
+    color: rgb(76, 168, 221);
 }
 
 body {
     font-size: 16px;
 
 }
-nav, header, main, footer {
+
+nav,
+header,
+main,
+footer {
     max-width: 750px;
     margin: 0 auto;
     border-radius: 16px;
@@ -49,7 +60,7 @@ nav ul {
 
 nav a {
     display: block;
-    color:rgb(6, 24, 83);
+    color: rgb(6, 24, 83);
     text-align: center;
     padding: 1rem;
     text-decoration: none;
